internal/fc/y.output

state 0
	$accept: .program $end 
	opt_statement_list: .    (3)
	opt_scope: .    (26)

	$end  reduce 3 (src line 50)
	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCLUDE  shift 18
	kOPTIONS  shift 36
	kIF  shift 7
	kLOOP  shift 8
	kWHILE  shift 9
	kFOR  shift 10
	kRETURN  shift 13
	kBREAK  shift 11
	kCONTINUE  shift 12
	kINCBIN  shift 31
	kSWITCH  shift 14
	kUSE  shift 17
	kPUBLIC  shift 19
	kPRIVATE  shift 20
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	';'  shift 22
	'{'  shift 37
	'!'  shift 25
	.  reduce 26 (src line 78)

	program  goto 1
	opt_statement_list  goto 2
	statement_list  goto 3
	statement_i  goto 4
	statement  goto 5
	opt_scope  goto 6
	block  goto 21
	exp  goto 15
	options  goto 16

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  opt_statement_list.    (1)

	.  reduce 1 (src line 44)


state 3
	opt_statement_list:  statement_list.    (2)
	statement_list:  statement_list.statement_i 
	opt_scope: .    (26)

	$end  reduce 2 (src line 49)
	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCLUDE  shift 18
	kOPTIONS  shift 36
	kIF  shift 7
	kLOOP  shift 8
	kWHILE  shift 9
	kFOR  shift 10
	kRETURN  shift 13
	kBREAK  shift 11
	kCONTINUE  shift 12
	kINCBIN  shift 31
	kSWITCH  shift 14
	kUSE  shift 17
	kPUBLIC  shift 19
	kPRIVATE  shift 20
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	';'  shift 22
	'{'  shift 37
	'}'  reduce 2 (src line 49)
	'!'  shift 25
	.  reduce 26 (src line 78)

	statement_i  goto 38
	statement  goto 5
	opt_scope  goto 6
	block  goto 21
	exp  goto 15
	options  goto 16

state 4
	statement_list:  statement_i.    (5)

	.  reduce 5 (src line 53)


state 5
	statement_i:  statement.    (6)

	.  reduce 6 (src line 55)


state 6
	statement:  opt_scope.kVAR var_decl_list ';' 
	statement:  opt_scope.kCONST var_decl_list ';' 
	statement:  opt_scope.kFUNCTION IDENT '(' opt_var_decl_list ')' ':' type_decl opt_options function_block 

	kFUNCTION  shift 41
	kCONST  shift 40
	kVAR  shift 39
	.  error


state 7
	statement:  kIF.'(' exp ')' statement else_block 

	'('  shift 42
	.  error


state 8
	statement:  kLOOP.'(' ')' statement 

	'('  shift 43
	.  error


state 9
	statement:  kWHILE.'(' exp ')' statement 

	'('  shift 44
	.  error


state 10
	statement:  kFOR.'(' IDENT ',' exp ',' exp ')' block 

	'('  shift 45
	.  error


state 11
	statement:  kBREAK.';' 

	';'  shift 46
	.  error


state 12
	statement:  kCONTINUE.';' 

	';'  shift 47
	.  error


state 13
	statement:  kRETURN.opt_exp ';' 
	opt_exp: .    (50)

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  reduce 50 (src line 116)

	opt_exp  goto 48
	exp  goto 49

state 14
	statement:  kSWITCH.'(' exp ')' '{' switch_block opt_default_block '}' 

	'('  shift 50
	.  error


state 15
	statement:  exp.';' 
	exp:  exp.'.' exp 
	exp:  exp.'=' exp 
	exp:  exp.'+' exp 
	exp:  exp.'-' exp 
	exp:  exp.'*' exp 
	exp:  exp.'/' exp 
	exp:  exp.'%' exp 
	exp:  exp.'&' exp 
	exp:  exp.'|' exp 
	exp:  exp.'^' exp 
	exp:  exp.ANDAND exp 
	exp:  exp.OROR exp 
	exp:  exp.ADDEQ exp 
	exp:  exp.SUBEQ exp 
	exp:  exp.EQEQ exp 
	exp:  exp.NEQ exp 
	exp:  exp.'<' exp 
	exp:  exp.'>' exp 
	exp:  exp.LEQ exp 
	exp:  exp.GEQ exp 
	exp:  exp.LSHIFT exp 
	exp:  exp.RSHIFT exp 
	exp:  exp.'(' exp_list ')' opt_block 
	exp:  exp.'[' exp ']' 

	LEQ  shift 70
	GEQ  shift 71
	EQEQ  shift 66
	ADDEQ  shift 64
	SUBEQ  shift 65
	NEQ  shift 67
	LSHIFT  shift 72
	RSHIFT  shift 73
	ANDAND  shift 62
	OROR  shift 63
	'='  shift 53
	'|'  shift 60
	'^'  shift 61
	'&'  shift 59
	'<'  shift 68
	'>'  shift 69
	'+'  shift 54
	'-'  shift 55
	'*'  shift 56
	'/'  shift 57
	'%'  shift 58
	'.'  shift 52
	'('  shift 74
	'['  shift 75
	';'  shift 51
	.  error


state 16
	statement:  options.';' 

	';'  shift 76
	.  error


state 17
	statement:  kUSE.opt_from IDENT opt_as ';' 
	opt_from: .    (28)

	tID  shift 80
	'*'  shift 79
	.  reduce 28 (src line 81)

	opt_from  goto 77
	id_list  goto 78

state 18
	statement:  kINCLUDE.opt_ident '(' STRING ')' opt_options ';' 
	opt_ident: .    (35)

	IDENT  shift 82
	.  reduce 35 (src line 91)

	opt_ident  goto 81

state 19
	statement:  kPUBLIC.':' 
	opt_scope:  kPUBLIC.    (27)

	':'  shift 83
	.  reduce 27 (src line 79)


state 20
	statement:  kPRIVATE.':' 

	':'  shift 84
	.  error


state 21
	statement:  block.    (24)

	.  reduce 24 (src line 75)


state 22
	statement:  ';'.    (25)

	.  reduce 25 (src line 76)


state 23
	exp:  '('.exp ')' 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 85

state 24
	exp:  '<'.type_decl '>' exp 

	IDENT  shift 87
	.  error

	type_decl  goto 86

state 25
	exp:  '!'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 88

state 26
	exp:  '-'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 89

state 27
	exp:  '+'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 90

state 28
	exp:  '*'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 91

state 29
	exp:  '&'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 92

state 30
	exp:  '['.exp_list ']' 
	exp_list: .    (91)

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  reduce 91 (src line 159)

	exp  goto 94
	exp_list  goto 93

state 31
	exp:  kINCBIN.'(' STRING ')' 

	'('  shift 95
	.  error


state 32
	exp:  ARROW.type_decl function_block 

	IDENT  shift 87
	.  error

	type_decl  goto 96

state 33
	exp:  NUMBER.    (86)

	.  reduce 86 (src line 153)


state 34
	exp:  IDENT.    (87)

	.  reduce 87 (src line 154)


state 35
	exp:  STRING.    (88)

	.  reduce 88 (src line 155)


state 36
	options:  kOPTIONS.'(' option_list ')' 

	'('  shift 97
	.  error


state 37
	block:  '{'.opt_statement_list '}' 
	opt_statement_list: .    (3)
	opt_scope: .    (26)

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCLUDE  shift 18
	kOPTIONS  shift 36
	kIF  shift 7
	kLOOP  shift 8
	kWHILE  shift 9
	kFOR  shift 10
	kRETURN  shift 13
	kBREAK  shift 11
	kCONTINUE  shift 12
	kINCBIN  shift 31
	kSWITCH  shift 14
	kUSE  shift 17
	kPUBLIC  shift 19
	kPRIVATE  shift 20
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	';'  shift 22
	'{'  shift 37
	'}'  reduce 3 (src line 50)
	'!'  shift 25
	.  reduce 26 (src line 78)

	opt_statement_list  goto 98
	statement_list  goto 3
	statement_i  goto 4
	statement  goto 5
	opt_scope  goto 6
	block  goto 21
	exp  goto 15
	options  goto 16

state 38
	statement_list:  statement_list statement_i.    (4)

	.  reduce 4 (src line 52)


state 39
	statement:  opt_scope kVAR.var_decl_list ';' 

	IDENT  shift 101
	.  error

	var_decl_list  goto 99
	var_decl  goto 100

state 40
	statement:  opt_scope kCONST.var_decl_list ';' 

	IDENT  shift 101
	.  error

	var_decl_list  goto 102
	var_decl  goto 100

state 41
	statement:  opt_scope kFUNCTION.IDENT '(' opt_var_decl_list ')' ':' type_decl opt_options function_block 

	IDENT  shift 103
	.  error


state 42
	statement:  kIF '('.exp ')' statement else_block 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 104

state 43
	statement:  kLOOP '('.')' statement 

	')'  shift 105
	.  error


state 44
	statement:  kWHILE '('.exp ')' statement 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 106

state 45
	statement:  kFOR '('.IDENT ',' exp ',' exp ')' block 

	IDENT  shift 107
	.  error


state 46
	statement:  kBREAK ';'.    (13)

	.  reduce 13 (src line 63)


state 47
	statement:  kCONTINUE ';'.    (14)

	.  reduce 14 (src line 64)


state 48
	statement:  kRETURN opt_exp.';' 

	';'  shift 108
	.  error


state 49
	opt_exp:  exp.    (51)
	exp:  exp.'.' exp 
	exp:  exp.'=' exp 
	exp:  exp.'+' exp 
	exp:  exp.'-' exp 
	exp:  exp.'*' exp 
	exp:  exp.'/' exp 
	exp:  exp.'%' exp 
	exp:  exp.'&' exp 
	exp:  exp.'|' exp 
	exp:  exp.'^' exp 
	exp:  exp.ANDAND exp 
	exp:  exp.OROR exp 
	exp:  exp.ADDEQ exp 
	exp:  exp.SUBEQ exp 
	exp:  exp.EQEQ exp 
	exp:  exp.NEQ exp 
	exp:  exp.'<' exp 
	exp:  exp.'>' exp 
	exp:  exp.LEQ exp 
	exp:  exp.GEQ exp 
	exp:  exp.LSHIFT exp 
	exp:  exp.RSHIFT exp 
	exp:  exp.'(' exp_list ')' opt_block 
	exp:  exp.'[' exp ']' 

	LEQ  shift 70
	GEQ  shift 71
	EQEQ  shift 66
	ADDEQ  shift 64
	SUBEQ  shift 65
	NEQ  shift 67
	LSHIFT  shift 72
	RSHIFT  shift 73
	ANDAND  shift 62
	OROR  shift 63
	'='  shift 53
	'|'  shift 60
	'^'  shift 61
	'&'  shift 59
	'<'  shift 68
	'>'  shift 69
	'+'  shift 54
	'-'  shift 55
	'*'  shift 56
	'/'  shift 57
	'%'  shift 58
	'.'  shift 52
	'('  shift 74
	'['  shift 75
	.  reduce 51 (src line 117)


state 50
	statement:  kSWITCH '('.exp ')' '{' switch_block opt_default_block '}' 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 109

state 51
	statement:  exp ';'.    (17)

	.  reduce 17 (src line 67)


state 52
	exp:  exp '.'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 110

state 53
	exp:  exp '='.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 111

state 54
	exp:  exp '+'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 112

state 55
	exp:  exp '-'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 113

state 56
	exp:  exp '*'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 114

state 57
	exp:  exp '/'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 115

state 58
	exp:  exp '%'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 116

state 59
	exp:  exp '&'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 117

state 60
	exp:  exp '|'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 118

state 61
	exp:  exp '^'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 119

state 62
	exp:  exp ANDAND.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 120

state 63
	exp:  exp OROR.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 121

state 64
	exp:  exp ADDEQ.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 122

state 65
	exp:  exp SUBEQ.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 123

state 66
	exp:  exp EQEQ.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 124

state 67
	exp:  exp NEQ.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 125

state 68
	exp:  exp '<'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 126

state 69
	exp:  exp '>'.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 127

state 70
	exp:  exp LEQ.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 128

state 71
	exp:  exp GEQ.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 129

state 72
	exp:  exp LSHIFT.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 130

state 73
	exp:  exp RSHIFT.exp 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 131

state 74
	exp:  exp '('.exp_list ')' opt_block 
	exp_list: .    (91)

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  reduce 91 (src line 159)

	exp  goto 94
	exp_list  goto 132

state 75
	exp:  exp '['.exp ']' 

	NUMBER  shift 33
	IDENT  shift 34
	STRING  shift 35
	kINCBIN  shift 31
	ARROW  shift 32
	'&'  shift 29
	'<'  shift 24
	'+'  shift 27
	'-'  shift 26
	'*'  shift 28
	'('  shift 23
	'['  shift 30
	'!'  shift 25
	.  error

	exp  goto 133

state 76
	statement:  options ';'.    (19)

	.  reduce 19 (src line 70)


state 77
	statement:  kUSE opt_from.IDENT opt_as ';' 

	IDENT  shift 134
	.  error


state 78
	opt_from:  id_list.kFROM 

	kFROM  shift 135
	.  error


state 79
	opt_from:  '*'.kFROM 

	kFROM  shift 136
	.  error


state 80
	id_list:  tID.    (31)
	id_list:  tID.id_list 
